# bevy_vrma

./: README.md
crates/vrm_viewer/: Cargo.toml
crates/vrm_viewer/public/: style.css
crates/vrm_viewer/src/: lib.rs  main.rs  move_leg.rs  ui.rs
docs/: index.html  vrm_viewer.d.ts  vrm_viewer.js  vrm_viewer_bg.wasm.d.ts
