[package]
name = "vrm_viewer"
publish = false
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
bevy = { workspace = true, default-features = true, features = ["wayland"] }
bevy_egui.workspace = true
bevy_panorbit_camera.workspace = true
bevy_vrm.workspace = true
gltf = "1.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_family = "wasm")'.dependencies]
bevy_blob_loader = "0.0.6"
bevy_web_file_drop = "0.0.5"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3", features = ["console"] }

[profile.release]
opt-level = "z"   # ("z" = minimize size; "s" = slightly less aggressive)
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Better optimization across the whole program
strip = true      # Automatically strips debug symbols (Rust 1.70+)
